[workspace]
resolver = "3"
members = [".", "examples/*/client", "examples/*/server", "examples/minecraft_start", "examples/forwarder"]

[package]
name = "tokio-raknet"
version = "0.2.0"
edition = "2024"
description = "A high-performance, asynchronous implementation of the RakNet protocol on top of Tokio."
license = "MIT"
repository = "https://github.com/jvigu/tokio-raknet"
keywords = ["raknet", "game-networking", "udp", "tokio", "async"]
categories = ["network-programming", "game-development", "asynchronous"]
readme = "README.md"
exclude = ["sources", ".github"]

[dependencies]
bitflags = "2.10.0"
bytes = "1.11.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net", "sync", "time", "rt-multi-thread", "macros"] }
tracing = "0.1.43"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec_benchmark"
harness = false

[[bench]]
name = "ack_benchmark"
harness = false
