[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-raknet = { path = "../../" }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = "0.11.4"
tracy-client = "0.18.3"
mimalloc = "0.1.48"
