[package]
name = "minecraft_start"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-raknet = { path = "../../" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1" # Add tracing as well, as tracing-subscriber depends on it, and it's good practice.
